--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "antd": "^5.23.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "immutable": "^5.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
