--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
+    "@reduxjs/toolkit": "^2.5.0",
     "antd": "^5.23.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
-    "immutable": "^5.0.3",
+    "immutable": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^3.1.0"
   },
   "scripts": {
