--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux-thunk": "^3.1.0"
   },
   "scripts": {
+    "deploy": "npm run build && aws s3 sync ./build s3://marito-aws-demo-s3",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
