--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,3 +13,7 @@ jobs:
     steps:
     - name: 'Hello World'
       run: echo "Hello world"
+    - name: 'Dime la fecha'
+      run: date
+    - name: Muestra el contenido del directorio
+      run: ls -la
