--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -12,9 +12,9 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
-    - name: 'Hello World'
-      run: echo "Hello world"
-    - name: 'Dime la fecha'
-      run: date
-    - name: Muestra el contenido del directorio
-      run: ls -la
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+        cache: 'npm'
+    - run: npm install
+    - run: npm run build
