--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,5 +16,5 @@ jobs:
       with:
         node-version: 20.x
         cache: 'npm'
-    - run: npm install
+    - run: npm ci --legacy-peer-deps
     - run: npm run build
