--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,5 +16,6 @@ jobs:
       with:
         node-version: 20.x
         cache: 'npm'
-    - run: npm ci --legacy-peer-deps
+    - run: npm ci --legacy-peer-deps --no-found --no-audit
+    - run: npm run lint
     - run: npm run build
