--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,4 +17,5 @@ jobs:
         node-version: 20.x
         cache: 'npm'
     - run: npm ci --legacy-peer-deps --no-found --no-audit
+    - run: npm run test
     - run: npm run build
