--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,6 +7,10 @@ on:
     branches: [ "main" ]
   pull_request: 
     branches: [ "main" ]
+
+concurrency: 
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
     
 jobs:
   platzi:
